--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -1,6 +1,25 @@
 .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     height: 80px;
     text-align: center;
     background-color: white;
     color: red;
+}
+.homeA {
+    margin-left: 20px;
+    text-decoration: none;
+    font-size: 20px;
+    color: red;
+
+}
+.homeLogo {
+    width: 45px;
+}
+.loginA {
+    margin-right: 20px;
+    text-decoration: none;
+    font-size: 12px;
+    color: black;
 }
